--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
-name: CI
-
-on:
-  push:
-    branches: [main]
-
-jobs:
-  build:
+deploy-to-test:
+    # Only run this job if "build" has ended successfully
+    needs:
+      - build
+      
     runs-on: ubuntu-latest
 
     steps:
@@ -40,3 +37,9 @@ jobs:
       - name: Run unit tests
         run: |
           python test_application.py
+            # Elastic Beanstalk CLI version
+      - name: Get EB CLI version
+        run: |
+          python -m pip install --upgrade pip
+          pip install awsebcli --upgrade
+          eb --version
