--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
-deploy-to-test:
-    # Only run this job if "build" has ended successfully
-    needs:
-      - build
-      
+name: CI
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,8 +17,7 @@ deploy-to-test:
         uses: actions/setup-python@v1
         with:
           python-version: "3.6"
-
-      # Set up cache for pip
+           # Set up cache for pip
       - name: Get pip cache dir
         id: pip-cache
         run: |
@@ -29,9 +31,13 @@ deploy-to-test:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # Elastic Beanstalk CLI version
-      - name: Get EB CLI version
+      # Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install awsebcli --upgrade
-          eb --version
+          pip install -r requirements.txt
+
+      # Run our unit tests
+      - name: Run unit tests
+        run: |
+          python test_application.py
